# AURORA-Lite-GenAI-Infra-Research-Investment-Intelligence

./: .env.example  .env.local.example  .gitignore  DEPLOY.md  Makefile  README.md  STATUS.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/api/: .env.example  Dockerfile  README.md  main.py  prestart.sh  pyproject.toml  requirements.txt
apps/api/aurora/: __init__.py  alembic_helpers.py  auth.py  clients.py  config.py  copilot.py  db.py  etl.py  evals_runner.py  flows.py  graph_helpers.py  graphql.py  graphql_schema.py  lakefs_provider.py  main.py  main_shim.py  metrics.py  models.py  rag_models.py  rag_service.py  ratelimit.py  retrieval.py  trends.py
apps/api/tests/: conftest.py  test_api_tenant_retrieval.py  test_citations_and_indexing.py  test_copilot_m1.py  test_dev_token_header_query.py  test_forecast_and_kg_export.py  test_gates_status_market.py  test_graphql.py  test_insights.py  test_insights_enforcement.py  test_m1_copilot.py  test_m2_dashboard.py  test_m2_dashboard_hiring_patents.py  test_m3_alerts.py  test_m3_alerts_enriched.py  test_m3_alerts_threshold_std.py  test_m3_deals_forecast_endpoints.py  test_m3_dev_metrics.py  test_m3_extras.py  test_m3_hiring_patents_ingest.py  test_m3_people_investor_endpoints.py  test_m3_perf_ego.py  test_m3_signal.py  test_m3_signal_config.py  test_m3_signal_details.py  test_m4_forecast_backtest.py  test_m4_trends_changepoints.py  test_m5_m9_depth.py  test_m6_field_level_citations.py  test_m7_playbook_export.py  test_m9_ci_gates_observability.py  (+47 more)
(+291 files in other folders)
