[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-lite"
version = "0.0.1"
description = "AURORA-Lite Phase 2 M1 scaffolding"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.6.0",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
addopts = "-q"
