[tool.poetry]
name = "aurora-api"
version = "0.1.0"
description = "AURORA-Lite FastAPI backend"
authors = ["AURORA Team <dev@example.com>"]
readme = "README.md"
packages = [ { include = "aurora" } ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.9.1"
meilisearch = "^0.31.5"
neo4j = "^5.25.0"
sentence-transformers = "^3.1.0"
llama-index = "^0.11.0"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-vector-stores-qdrant = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
